--- a/packages/chealt.com/public/style.css
+++ b/packages/chealt.com/public/style.css
@@ -3,6 +3,7 @@
   --gap--m: 12px;
   --gap--l: 16px;
   --gap--xl: 32px;
+  --gap--xxl: 48px;
   --color-brand: rgb(236 179 66);
   --color-brand--light: rgb(240 225 195);
   --color-error: rgb(236 66 66);
